--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
       <p>hello noakhali</p>
        <button>4thbutoon</button>
     <button>5thbutton</button>
+    <a href="www.google.com"><button>Gooogle</button></a>
 </body>
 </html>
