--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
       <p>hello noakhali</p>
        <button>4thbutoon</button>
     <button>5thbutton</button>
-    <a href="www.google.com"><button>Amazon</button></a>
+    <a href="www.google.com"><button>billgates</button></a>
 </body>
 </html>
